Fixed possible clipping of usernames

--- a/css/main.css
+++ b/css/main.css
@@ -35,6 +35,10 @@ input {
 	opacity: 0.5;
 }
 
+select {
+	overflow: visible;
+}
+
 input:hover,
 select:hover {
 	opacity: 1;
